11/6/23 added the student, faculty and courses components. Set the content page and routers.

--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,1 +1,6 @@
-<p>content works!</p>
+<div class="left-container">
+  <app-nav-left></app-nav-left>
+  <app-content-main>
+    <router-outlet></router-outlet>
+  </app-content-main>
+</div>
