11/6/23 Fixed bugs in routing module. FIxed the routerOutlet in the content-main component. Fixed so that the home is correct.

--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,6 +1,4 @@
 <div class="left-container">
   <app-nav-left></app-nav-left>
-  <app-content-main>
-    <router-outlet></router-outlet>
-  </app-content-main>
+  <app-content-main></app-content-main>
 </div>
