--- a/src/app/components/nav-left/nav-left.component.html
+++ b/src/app/components/nav-left/nav-left.component.html
@@ -1,1 +1,12 @@
-<p>nav-left works!</p>
+<ul>
+  <li>
+    <a routerLink="/home/students">Students</a>
+  </li>
+  <li>
+    <a routerLink="/home/faculty">Faculty</a>
+  </li>
+  <li>
+    <a routerLink="/home/courses">Courses</a>
+  </li>
+
+</ul>
