23/6/23 Developed the studentsMain and in it the students and studentsFilter components

--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,4 +1,4 @@
-<div class="left-container">
+<div class="main-container">
   <app-nav-left></app-nav-left>
   <app-content-main></app-content-main>
 </div>
