--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,19 @@ body{
   margin: 0;
   box-sizing: border-box;
 }
+
+.grid{
+  display: grid;
+}
+
+.grid--col-12{
+  grid-template-columns: repeat(12, 1fr);
+}
+
+.col--9{
+  grid-column: 1 / 9;
+}
+
+.col--3{
+  grid-column: 9 / -1;
+}
