--- a/src/app/components/content/content.component.css
+++ b/src/app/components/content/content.component.css
@@ -1,16 +1,17 @@
 .main-container{
   display: grid;
   grid-template-columns: 15% auto;
+  background-color: #eee;
 }
 
 app-nav-left{
   grid-column: 0;
   display: block;
-  background-color: green;
   padding: 0;
   margin: 0;
+  background-color: #000;
 }
 
 app-content-main{
-  background-color: red;
+  padding: 1rem 2rem;
 }
