--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -15,6 +15,7 @@
         <td>{{student.id}}</td>
         <td>{{student.mainEmail}}</td>
         <td>{{student.mainMobile}}</td>
+        <td>{{student.program}}</td>
       </tr>
     </tbody>
   </table>
