--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,18 @@ body{
   grid-template-columns: repeat(12, 1fr);
 }
 
+.grid--col-4{
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.grid--col-2{
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--row-2{
+  grid-template-rows: repeat(2, 1fr);
+}
+
 .main-col--9{
   grid-column: 1 / 9;
 }
