--- a/src/app/components/students-filter-container/students-filter-container.component.html
+++ b/src/app/components/students-filter-container/students-filter-container.component.html
@@ -16,7 +16,7 @@
         [(ngModel)]="registrationStatusesLine"/>
 
       <div *ngFor="let registrationStatus of registrationStatusList">
-        <input type="checkbox" class="form-check-inline" [value]="registrationStatus"
+        <input type="checkbox" class="form-check-inline" [value]="registrationStatus.id"
           (change)="getSelectedRegistrationValue(registrationStatus)"/>
         <span>{{ registrationStatus.name }}</span>
       </div>
@@ -65,7 +65,6 @@
         </option>
       </select>
     </div>
-
-
+    <button class="btn btn-primary" type="submit">Submit</button>
   </form>
 </div>
