--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,4 +1,4 @@
 <div class="main-container">
   <app-nav-left></app-nav-left>
-  <app-content-main></app-content-main>
+  <app-content-main [ngClass]="{'test': isStudent}"></app-content-main>
 </div>
