--- a/src/app/components/students-detail-main/students-detail-main.component.html
+++ b/src/app/components/students-detail-main/students-detail-main.component.html
@@ -1,1 +1,5 @@
-<h2>{{student.firstName}} {{student.lastName}}</h2>
+<div class="container">
+  <app-student-detail-header [student]="student"></app-student-detail-header>
+</div>
+
+
