5/11/23 added links to student information components in student-tabs

--- a/src/app/components/student-detail-header-student/student-detail-header-student.component.css
+++ b/src/app/components/student-detail-header-student/student-detail-header-student.component.css
@@ -1,11 +1,12 @@
 .container{
   padding: 0;
   margin: 0;
+  margin-left: 2rem;
   width: 100%;
 }
 
 .student__details{
   width: 100%;
-  
+
 
 }
