--- a/src/app/components/student-detail-header-student/student-detail-header-student.component.html
+++ b/src/app/components/student-detail-header-student/student-detail-header-student.component.html
@@ -3,4 +3,5 @@
     <h1>{{student.firstName}} {{student.lastName}}</h1>
     <p>{{student.id}}</p>
   </div>
+  <app-student-tabs [student]="student"></app-student-tabs>
 </div>
