29/11/23 developed parents-contact component

--- a/src/app/components/student-contact/student-contact.component.html
+++ b/src/app/components/student-contact/student-contact.component.html
@@ -1,1 +1,88 @@
-<p>student-contact works!</p>
+<form #contactForm="ngForm" (ngSubmit)="onSave(contactForm.value)">
+    <div class="info-block">
+      <h2 class="info-block__heading">Personal Detail</h2>
+      <div class="info-block__body grid grid--col-4">
+        <div class="form-group">
+          <label for="israeliId">Israeli Id</label>
+          <input type="text" class="form-control" required name="israeliId"
+              id="israeliId" placeholder="Israeli Id" #israeliId="ngModel" ngModel>
+          <div class="alert alert-danger" *ngIf="israeliId.touched && !israeliId.valid">
+            Israeli Id is required
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="firstName">First Name</label>
+          <input type="text" class="form-control" required name="firstName"
+              id="firstName" placeholder="First Name" #firstName="ngModel" ngModel>
+          <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid">
+            First name is required
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="lastName">Last Name</label>
+          <input type="text" class="form-control" required name="lastName"
+              id="lastName" placeholder="Last Name" #lastName="ngModel" ngModel>
+          <div class="alert alert-danger" *ngIf="lastName.touched && !lastName.valid">
+            Last name is required
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="birthDate">Birth Date</label>
+          <input type="text" class="form-control" required name="birthDate"
+              id="birthDate" placeholder="Birth Date" #birthDate="ngModel" ngModel>
+          <div class="alert alert-danger" *ngIf="birthDate.touched && !birthDate.valid">
+            Birth Date is required
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="address">Street Address</label>
+          <input type="text" class="form-control" required name="address"
+              id="address" placeholder="Street Address" #address="ngModel" ngModel>
+          <div class="alert alert-danger" *ngIf="address.touched && !address.valid">
+            Street Address is required
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="city">City</label>
+          <input type="text" class="form-control" required name="city"
+              id="city" placeholder="City" #city="ngModel" ngModel>
+          <div class="alert alert-danger" *ngIf="city.touched && !city.valid">
+            City is required
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="info-block">
+      <h2 class="info-block__heading">Main Contact Information</h2>
+      <div class="info-block__body grid grid--col-4">
+        <div class="form-group">
+          <label for="mainContactPhone">Main Contact Phone Number</label>
+          <input type="text" class="form-control" required name="mainContactPhone"
+              id="mainContactPhone" placeholder="Main Contact Phone Number"
+              #mainContactPhone="ngModel" ngModel>
+          <div class="alert alert-danger" *ngIf="mainContactPhone.touched && !mainContactPhone.valid">
+            Main Contact Phone Number is required
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="mainContactEmail">Main Contact Email Address</label>
+          <input type="text" class="form-control" required name="mainContactEmail"
+              id="mainContactEmail" placeholder="Main Contact Email Address" #mainContactEmail="ngModel" ngModel>
+          <div class="alert alert-danger" *ngIf="mainContactEmail.touched && !mainContactEmail.valid">
+            Main Contact Email Address is required
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="info-block">
+      <h2 class="info-block__heading">Parents Information</h2>
+      <div class="parents-container info-block__body grid grid--col-2">
+        <app-parents-contact></app-parents-contact>
+        <app-parents-contact></app-parents-contact>
+      </div>
+    </div>
+    <div class="info-block">
+      <button class="btn btn-primary">Save</button>
+    </div>
+</form>
