--- a/src/app/components/students-detail-main/students-detail-main.component.html
+++ b/src/app/components/students-detail-main/students-detail-main.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="student-container">
   <app-student-detail-header [student]="student"></app-student-detail-header>
 </div>
 
