--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+:root{
+  --main-background-color: #eee;
+  --main-background-boxshadow: 0 0 5px 3px #ccc;
+}
+
 body{
   padding: 0;
   margin: 0;
@@ -40,4 +45,12 @@ ul{
 li a{
   text-decoration: none;
   color: black;
+}
+
+.student-container{
+    background-color: #fff;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
