17/12/23 got students from api in students component

--- a/src/app/components/student-contact/student-contact.component.html
+++ b/src/app/components/student-contact/student-contact.component.html
@@ -5,7 +5,7 @@
         <div class="form-group">
           <label for="israeliId">Israeli Id</label>
           <input type="text" class="form-control" required name="israeliId"
-              id="israeliId" placeholder="Israeli Id" #israeliId="ngModel" ngModel>
+              id="israeliId" placeholder="Israeli Id" #israeliId="ngModel" [(ngModel)]="israeliID">
           <div class="alert alert-danger" *ngIf="israeliId.touched && !israeliId.valid">
             Israeli Id is required
           </div>
@@ -13,7 +13,7 @@
         <div class="form-group">
           <label for="firstName">First Name</label>
           <input type="text" class="form-control" required name="firstName"
-              id="firstName" placeholder="First Name" #firstName="ngModel" ngModel>
+              id="firstName" placeholder="First Name" #firstName="ngModel" [(ngModel)]="FirstName">
           <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid">
             First name is required
           </div>
@@ -21,7 +21,7 @@
         <div class="form-group">
           <label for="lastName">Last Name</label>
           <input type="text" class="form-control" required name="lastName"
-              id="lastName" placeholder="Last Name" #lastName="ngModel" ngModel>
+              id="lastName" placeholder="Last Name" #lastName="ngModel" [(ngModel)]="LastName">
           <div class="alert alert-danger" *ngIf="lastName.touched && !lastName.valid">
             Last name is required
           </div>
@@ -30,7 +30,7 @@
         <div class="form-group">
           <label for="birthDate">Birth Date</label>
           <input type="text" class="form-control" required name="birthDate"
-              id="birthDate" placeholder="Birth Date" #birthDate="ngModel" ngModel>
+              id="birthDate" placeholder="Birth Date" #birthDate="ngModel" [(ngModel)]="BirthDate">
           <div class="alert alert-danger" *ngIf="birthDate.touched && !birthDate.valid">
             Birth Date is required
           </div>
@@ -38,7 +38,7 @@
         <div class="form-group">
           <label for="address">Street Address</label>
           <input type="text" class="form-control" required name="address"
-              id="address" placeholder="Street Address" #address="ngModel" ngModel>
+              id="address" placeholder="Street Address" #address="ngModel" [(ngModel)]="Address">
           <div class="alert alert-danger" *ngIf="address.touched && !address.valid">
             Street Address is required
           </div>
@@ -46,7 +46,7 @@
         <div class="form-group">
           <label for="city">City</label>
           <input type="text" class="form-control" required name="city"
-              id="city" placeholder="City" #city="ngModel" ngModel>
+              id="city" placeholder="City" #city="ngModel" [(ngModel)]="City">
           <div class="alert alert-danger" *ngIf="city.touched && !city.valid">
             City is required
           </div>
