--- a/src/app/components/students/students.component.css
+++ b/src/app/components/students/students.component.css
@@ -5,3 +5,25 @@
 .student{
   cursor: pointer;
 }
+
+.btn-primary{
+  background-color: var(--main-area-background-color);
+}
+
+.btn{
+  border: none;
+}
+
+.btn--add{
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
+  font-size: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn--add .icon{
+  font-size: 2rem;
+}
