--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -1,7 +1,7 @@
 .nav-bar{
   width: 100%;
   height: 100px;
-  background-color: gold;
+  background-color: var(--main-area-background-color);
   position: fixed;
 
 }
