--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 :root{
   --main-background-color: #eee;
   --main-background-boxshadow: 0 0 5px 3px #ccc;
+  --main-area-background-color: #22e670;
 }
 
 body{
@@ -53,4 +54,9 @@ li a{
     width: 100%;
     padding: 0;
     margin: 0;
+}
+
+.icon{
+  width: 100%;
+  height: 100%;
 }
