--- a/src/app/components/student-detail-header-student/student-detail-header-student.component.html
+++ b/src/app/components/student-detail-header-student/student-detail-header-student.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="student__details">
     <h1>{{student.firstName}} {{student.lastName}}</h1>
-    <p>{{student.stakeholderID}}</p>
+    <p>{{student.israeliID}}</p>
   </div>
   <app-student-tabs [student]="student"></app-student-tabs>
 </div>
