--- a/src/app/components/students-filter-container/students-filter-container.component.html
+++ b/src/app/components/students-filter-container/students-filter-container.component.html
@@ -13,6 +13,7 @@
     <div class="form-group">
       <label for="registrationStatus">Registration Status</label>
       <input type="text" class="form-control" name="selectedRgistrationStatuses"
+        id="registrationStatus"
         [(ngModel)]="registrationStatusesLine"/>
 
       <div *ngFor="let registrationStatus of registrationStatusList">
