6/2/24 added filtering students by activity in studentsMain

--- a/src/app/components/parents-contact/parents-contact.component.html
+++ b/src/app/components/parents-contact/parents-contact.component.html
@@ -2,21 +2,25 @@
   <div class="form-group">
     <label for="israeliId">Israeli Id</label>
     <input type="text" class="form-control" required name="israeliId"
-        id="israeliId" placeholder="Israeli Id" #israeliId="ngModel" [(ngModel)]="parent.israeliID">
+        id="israeliId" placeholder="Israeli Id" #israeliId="ngModel" [(ngModel)]="parent.israeliID"
+        (ngModelChange)="onParentChange()">
   </div>
   <div class="form-group">
     <label for="firstName">First Name</label>
     <input type="text" class="form-control" required name="firstName"
-        id="firstName" placeholder="First Name" #firstName="ngModel" [(ngModel)]="parent.firstName">
+        id="firstName" placeholder="First Name" #firstName="ngModel" [(ngModel)]="parent.firstName"
+        (ngModelChange)="onParentChange()">
   </div>
   <div class="form-group">
     <label for="email">Email</label>
     <input type="text" class="form-control" required name="email"
-        id="email" placeholder="Email" #email="ngModel" [(ngModel)]="parent.emailAddress">
+        id="email" placeholder="Email" #email="ngModel" [(ngModel)]="parent.emailAddress"
+        (ngModelChange)="onParentChange()">
   </div>
   <div class="form-group">
     <label for="cellphone">Cellphone</label>
     <input type="text" class="form-control" required name="cellphone"
-        id="cellphone" placeholder="Cellphone" #email="ngModel" [(ngModel)]="parent.CellPhoneNumber">
+        id="cellphone" placeholder="Cellphone" #email="ngModel" [(ngModel)]="parent.CellPhoneNumber"
+        (ngModelChange)="onParentChange()">
   </div>
 </div>
