--- a/src/app/components/student-contact/student-contact.component.html
+++ b/src/app/components/student-contact/student-contact.component.html
@@ -83,11 +83,11 @@
     <div class="info-block">
       <h2 class="info-block__heading">Parents Information</h2>
       <div class="parents-container info-block__body grid grid--col-2">
-        <app-parents-contact [parent]="parent1"></app-parents-contact>
-        <app-parents-contact [parent]="parent2"></app-parents-contact>
+        <app-parents-contact [parent]="parent1" (updatedParent)="updateStudentParent($event)"></app-parents-contact>
+        <app-parents-contact [parent]="parent2" (updatedParent)="updateStudentParent($event)"></app-parents-contact>
       </div>
     </div>
     <div class="info-block">
-      <button class="btn btn-primary">Save</button>
+      <button type="submit" class="btn btn-primary">Save</button>
     </div>
 </form>
