--- a/src/app/components/students-main/students-main.component.html
+++ b/src/app/components/students-main/students-main.component.html
@@ -1,8 +1,8 @@
 <div class="grid grid--col-12">
   <div class="main-col--9">
-    <app-students></app-students>
+    <app-students [students]="students"></app-students>
   </div>
   <div class="main-col--3">
-    <app-students-filter-container></app-students-filter-container>
+    <app-students-filter-container (isFilterByActiveStudents)="filterByActiveStudents($event)"></app-students-filter-container>
   </div>
 </div>
