--- a/src/app/components/student-contact/student-contact.component.html
+++ b/src/app/components/student-contact/student-contact.component.html
@@ -83,8 +83,8 @@
     <div class="info-block">
       <h2 class="info-block__heading">Parents Information</h2>
       <div class="parents-container info-block__body grid grid--col-2">
-        <app-parents-contact [parent]="parent1" (updatedParent)="updateStudentParent($event)"></app-parents-contact>
-        <app-parents-contact [parent]="parent2" (updatedParent)="updateStudentParent($event)"></app-parents-contact>
+        <app-parents-contact [parent]="parent1" (updatedParent)="updateStudentParent_1($event)"></app-parents-contact>
+        <app-parents-contact [parent]="parent2" (updatedParent)="updateStudentParent_2($event)"></app-parents-contact>
       </div>
     </div>
     <div class="info-block">
