10/3/24 fixed filtering by active students

--- a/src/app/components/student-contact/student-contact.component.html
+++ b/src/app/components/student-contact/student-contact.component.html
@@ -54,7 +54,7 @@
           <div class="alert alert-danger" *ngIf="city.touched && !city.valid">
             City is required
           </div>
-        </div>
+        </div>st
       </div>
     </div>
     <div class="info-block">
