29/3/24 populated academicYearSelector component

--- a/src/app/components/nav-left/nav-left.component.html
+++ b/src/app/components/nav-left/nav-left.component.html
@@ -1,3 +1,4 @@
+<app-academic-year-selector></app-academic-year-selector>
 <ul>
   <li>
     <a routerLink="/home/students">Students</a>
@@ -8,5 +9,4 @@
   <li>
     <a routerLink="/home/courses">Courses</a>
   </li>
-
 </ul>
