--- a/src/app/student-program/student-program.component.html
+++ b/src/app/student-program/student-program.component.html
@@ -1,40 +1,84 @@
 <form #programForm="ngForm" (ngSubmit)="onSave(programForm.value)">
   <div class="info-block">
     <h2 class="info-block__heading">Program Detail</h2>
-    <div class="info-block__body grid grid--col-4">
+    <div class="info-block__body grid grid--col-2">
       <div class="form-group">
         <label for="program">Program</label>
         <select name="program" id="program" class="form-control" ngModel>
-          <option *ngFor="let program of programs" [value]="program.id">{{program.name}}</option>
+          <option *ngFor="let program of programs" [value]="program.id">
+            {{ program.name }}
+          </option>
         </select>
       </div>
       <div class="form-group">
         <label for="registrationStatus">Registration Status</label>
-        <select name="registrationStatus" id="registrationStatus" class="form-control" ngModel>
-          <option *ngFor="let registrationStatus of registrationStatuses"
-          [value]="registrationStatus.id">{{registrationStatus.name}}</option>
+        <select
+          name="registrationStatus"
+          id="registrationStatus"
+          class="form-control"
+          ngModel
+        >
+          <option
+            *ngFor="let registrationStatus of registrationStatuses"
+            [value]="registrationStatus.id"
+          >
+            {{ registrationStatus.name }}
+          </option>
         </select>
       </div>
       <div class="form-group">
         <label for="programPriceList">Program Price List</label>
-        <select name="programPriceList" id="programPriceList" class="form-control" ngModel>
-          <option *ngFor="let programPriceList of programPriceLists"
-          [value]="programPriceList.id">{{programPriceList.name}}</option>
+        <select
+          name="programPriceList"
+          id="programPriceList"
+          class="form-control"
+          ngModel
+        >
+          <option
+            *ngFor="let programPriceList of programPriceLists"
+            [value]="programPriceList.id"
+          >
+            {{ programPriceList.name }}
+          </option>
         </select>
       </div>
       <div class="form-group">
         <label for="instrumentPriceList">Instrument Price List</label>
-        <select name="instrumentPriceList" id="instrumentPriceList" class="form-control" ngModel>
-          <option *ngFor="let instrumentPriceList of instrumentPriceLists"
-          [value]="instrumentPriceList.id">{{instrumentPriceList.name}}</option>
+        <select
+          name="instrumentPriceList"
+          id="instrumentPriceList"
+          class="form-control"
+          ngModel
+        >
+          <option
+            *ngFor="let instrumentPriceList of instrumentPriceLists"
+            [value]="instrumentPriceList.id"
+          >
+            {{ instrumentPriceList.name }}
+          </option>
         </select>
       </div>
-      <div class="form-group">
+      <div class="form-group main-col--full">
         <label for="comments">Comments</label>
-        <input type="text" class="form-control" name="comments"
-            id="comments" placeholder="Comments" #comments="ngModel" ngModel>
+        <input
+          type="text"
+          class="form-control"
+          name="comments"
+          id="comments"
+          placeholder="Comments"
+          #comments="ngModel"
+          ngModel
+        />
       </div>
     </div>
+    <div class="info-block">
+      <h2 class="info-block__heading">Main Instruments</h2>
+      <app-student-instruments></app-student-instruments>
+      <!-- <div class="info-block__body">
+
+      </div> -->
+    </div>
+
     <div class="info-block">
       <button type="submit" class="btn btn-primary">Save</button>
     </div>
