--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,10 @@ body{
   grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--col-5{
+  grid-template-columns: repeat(5, 1fr);
+}
+
 .grid--col-2{
   grid-template-columns: repeat(2, 1fr);
 }
@@ -37,6 +41,10 @@ body{
 
 .main-col--3{
   grid-column: 9 / -1;
+}
+
+.main-col--full{
+  grid-column: 1 / -1;
 }
 
 ul{
@@ -60,3 +68,38 @@ li a{
   width: 100%;
   height: 100%;
 }
+/* Form styling */
+form{
+  background-color: var(--main-background-color);
+  width: 90%;
+}
+
+.info-block{
+  padding: 1rem 2rem;
+}
+
+.info-block__heading{
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.info-block__body{
+  grid-gap: 10px;
+  background-color: #fff;
+  box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3);
+  padding: 1rem 2rem;
+}
+
+label{
+  color: #6eb52f;
+}
+
+.form-control{
+  border: none;
+  border-bottom: 1px solid #ccc;
+}
+
+.form-control:focus{
+  outline: none;
+}
+
