--- a/src/app/student-program/student-program.component.html
+++ b/src/app/student-program/student-program.component.html
@@ -71,15 +71,13 @@
         />
       </div>
     </div>
-    <div class="info-block">
-      <h2 class="info-block__heading">Main Instruments</h2>
-      <app-student-instruments></app-student-instruments>
-      <!-- <div class="info-block__body">
 
-      </div> -->
-    </div>
+    <h2 class="info-block__heading">Main Instruments</h2>
+    <app-student-instruments></app-student-instruments>
+    <!-- <div class="info-block__body">
 
-    <div class="info-block">
+    </div> -->
+    <div class="info-block__heading">
       <button type="submit" class="btn btn-primary">Save</button>
     </div>
   </div>
