--- a/src/app/components/academic-year-selector/academic-year-selector.component.html
+++ b/src/app/components/academic-year-selector/academic-year-selector.component.html
@@ -1,6 +1,6 @@
 <select name="academicYear" id="academicYear" [(ngModel)]="selectedYear"
     (ngModelChange)="submitSelectedYear()" class="form-control">
-      <option *ngFor="let academicYear of academicYears" [value]="academicYear">
+      <option *ngFor="let academicYear of academicYears" [ngValue]="academicYear">
         Academic Year: {{academicYear.academicYearName}}
       </option>
 </select>
